--- a/Homework 0/Temperature/Temperature.vcxproj.filters
+++ b/Homework 0/Temperature/Temperature.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="temp_main.cpp">
+    <ClCompile Include="temperature_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
