--- a/Lab3/Lab3.vcxproj
+++ b/Lab3/Lab3.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Point.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="lab3_main.cpp" />
     <ClCompile Include="Point.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
