Started Catch2Lab_main.cpp

--- a/Catch2 Lab/Catch2 Lab.vcxproj
+++ b/Catch2 Lab/Catch2 Lab.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Vector.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Catch2Lab_main.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
