--- a/Catch2 Lab/Catch2 Lab.vcxproj.filters
+++ b/Catch2 Lab/Catch2 Lab.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="Vector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Catch2Lab_main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
