--- a/Homework 2/Spelunking/Spelunking.vcxproj.filters
+++ b/Homework 2/Spelunking/Spelunking.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="Cave.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main_file.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
