--Added a triangle to the window (so prettyyyyyyyyyy!) --Added GLFWLab_Refractor.cpp that we will work on later

--- a/Lab7/Lab7.vcxproj
+++ b/Lab7/Lab7.vcxproj
@@ -140,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GLFWLab_Refractor.cpp" />
     <ClCompile Include="Lab7GLFW.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
