--- a/Lab7/Lab7.vcxproj.filters
+++ b/Lab7/Lab7.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Lab7GLFW.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GLFWLab_Refractor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
