Added a Variable_Bitset class that will store bit flags. Added a Tools header that will define functions of unspecific use.

--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="Player.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tools.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Variable_Bitset.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_file.cpp">
