--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
@@ -141,6 +141,8 @@
     <ClInclude Include="Monster.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Room.hpp" />
+    <ClInclude Include="Tools.hpp" />
+    <ClInclude Include="Variable_Bitset.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_file.cpp" />
