-Completed the CS202 Lab for creating a Static Library -Working on Hunt The Wumpus Variable_Bitset class

--- a/CS202LabStaticLibrary/CS202LabStaticLibrary.vcxproj.filters
+++ b/CS202LabStaticLibrary/CS202LabStaticLibrary.vcxproj.filters
@@ -15,33 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Room.hpp">
+    <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Monster.hpp">
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Tools.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Variable_Bitset.hpp">
+    <ClInclude Include="JSpace.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main_file.cpp">
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Room.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Tools.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Variable_Bitset.cpp">
+    <ClCompile Include="JSpace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
