Reworked several aspects of multiple classes to use ints to store ids of rooms instead of shared_ptrs to them.
Added the Hazard header file

--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Tools.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Hazard.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_file.cpp">
