--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Hazard.hpp" />
     <ClInclude Include="Monster.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Room.hpp" />
