Finished room sequence
Added Hazard.cpp

Working on renaming member functions to use capital letters instead of _

--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Hazard.cpp" />
     <ClCompile Include="main_file.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Tools.cpp" />
