--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="Tools.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hazard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
