Added Monster.cpp, improving Player.cpp and Tools.cpp, finished introduction segment.

--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj
@@ -147,6 +147,8 @@
   <ItemGroup>
     <ClCompile Include="Hazard.cpp" />
     <ClCompile Include="main_file.cpp" />
+    <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Tools.cpp" />
   </ItemGroup>
