--- a/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
+++ b/Homework 4/Hunt The Wumpus/Hunt The Wumpus.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClCompile Include="Hazard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Monster.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
