-Renamed 3DVector class to Vector3D -Created class definitions for Vector3D

--- a/Lab7 - Overloaded Operators 1/Lab7 - Overloaded Operators 1.vcxproj
+++ b/Lab7 - Overloaded Operators 1/Lab7 - Overloaded Operators 1.vcxproj
@@ -138,10 +138,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="3DVector.hpp" />
+    <ClInclude Include="Vector3D.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="3DVector.cpp" />
+    <ClCompile Include="Vector3D.cpp" />
     <ClCompile Include="main_file.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
