--- a/Iditarod Challenge 2/Iditarod Challenge 2.vcxproj.filters
+++ b/Iditarod Challenge 2/Iditarod Challenge 2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main_file.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StopWatch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StopWatch.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
