-Run tests of ackermann function and identify limits: Complete -Integrated the Timer class into the main_file

--- a/Iditarod Challenge 2/Iditarod Challenge 2.vcxproj.filters
+++ b/Iditarod Challenge 2/Iditarod Challenge 2.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main_file.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StopWatch.cpp">
+    <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="StopWatch.hpp">
+    <ClInclude Include="Timer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
