--- a/Iditarod Challenge 2/Iditarod Challenge 2.vcxproj
+++ b/Iditarod Challenge 2/Iditarod Challenge 2.vcxproj
@@ -139,10 +139,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main_file.cpp" />
-    <ClCompile Include="StopWatch.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="StopWatch.hpp" />
+    <ClInclude Include="Timer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
