-Added CityNode class header file

--- a/Iditarod Challenge 3/Iditarod Challenge 3.vcxproj
+++ b/Iditarod Challenge 3/Iditarod Challenge 3.vcxproj
@@ -140,6 +140,9 @@
   <ItemGroup>
     <ClCompile Include="IDC3_main_file.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CityNode.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
