Write class CityList: Complete

--- a/Iditarod Challenge 3/Iditarod Challenge 3.vcxproj
+++ b/Iditarod Challenge 3/Iditarod Challenge 3.vcxproj
@@ -138,10 +138,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CityList.cpp" />
     <ClCompile Include="CityNode.cpp" />
     <ClCompile Include="IDC3_main_file.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CityList.hpp" />
     <ClInclude Include="CityNode.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
