--- a/Iditarod Challenge 3/Iditarod Challenge 3.vcxproj.filters
+++ b/Iditarod Challenge 3/Iditarod Challenge 3.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="CityNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CityList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CityNode.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CityList.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
