--- a/Lab13 - Class Templates/Lab13 - Class Templates.vcxproj
+++ b/Lab13 - Class Templates/Lab13 - Class Templates.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{3526E218-AFFF-4A4B-A319-CB37F7D8FB4C}</ProjectGuid>
-    <RootNamespace>IditarodChallenge4</RootNamespace>
+    <ProjectGuid>{FC632D2A-1C8F-417F-B41F-B2B807F18A5B}</ProjectGuid>
+    <RootNamespace>Lab13ClassTemplates</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,17 +138,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CityList.cpp" />
-    <ClCompile Include="CityNode.cpp" />
-    <ClCompile Include="CityPath.cpp" />
-    <ClCompile Include="Debug.cpp" />
-    <ClCompile Include="IDC4_main.cpp" />
+    <ClCompile Include="Lab13_main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CityList.hpp" />
-    <ClInclude Include="CityNode.hpp" />
-    <ClInclude Include="CityPath.hpp" />
-    <ClInclude Include="Debug.hpp" />
+    <ClInclude Include="Wrapper.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
