Write a class called CityPath:: Complete

--- a/Iditarod Challenge 4/Iditarod Challenge 4.vcxproj.filters
+++ b/Iditarod Challenge 4/Iditarod Challenge 4.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="CityPath.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TSP_Solver.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
