--- a/Iditarod Challenge 4/Iditarod Challenge 4.vcxproj
+++ b/Iditarod Challenge 4/Iditarod Challenge 4.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="CityNode.hpp" />
     <ClInclude Include="CityPath.hpp" />
     <ClInclude Include="Debug.hpp" />
+    <ClInclude Include="TSP_Solver.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
