--- a/Iditarod Challenge 4/Iditarod Challenge 4.vcxproj
+++ b/Iditarod Challenge 4/Iditarod Challenge 4.vcxproj
@@ -141,14 +141,13 @@
     <ClCompile Include="CityList.cpp" />
     <ClCompile Include="CityNode.cpp" />
     <ClCompile Include="CityPath.cpp" />
-    <ClCompile Include="Debug.cpp" />
     <ClCompile Include="IDC4_main.cpp" />
+    <ClCompile Include="TSP_Solver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CityList.hpp" />
     <ClInclude Include="CityNode.hpp" />
     <ClInclude Include="CityPath.hpp" />
-    <ClInclude Include="Debug.hpp" />
     <ClInclude Include="TSP_Solver.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
