-Completed Iditarod Challenge 4 -Started Iditarod Challenge 5

--- a/Iditarod Challenge 5/Iditarod Challenge 5.vcxproj
+++ b/Iditarod Challenge 5/Iditarod Challenge 5.vcxproj
@@ -142,12 +142,14 @@
     <ClCompile Include="CityNode.cpp" />
     <ClCompile Include="CityPath.cpp" />
     <ClCompile Include="IDC5_main.cpp" />
+    <ClCompile Include="Jtimer.cpp" />
     <ClCompile Include="TSP_Solver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CityList.hpp" />
     <ClInclude Include="CityNode.hpp" />
     <ClInclude Include="CityPath.hpp" />
+    <ClInclude Include="Jtimer.hpp" />
     <ClInclude Include="TSP_Solver.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
