--- a/Iditarod Challenge 5/Iditarod Challenge 5.vcxproj.filters
+++ b/Iditarod Challenge 5/Iditarod Challenge 5.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TSP_Solver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Jtimer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CityNode.hpp">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TSP_Solver.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Jtimer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
